cabal-version:      2.4
name:               lession
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           https://github.com/viluon/lession-hs

-- A URL where users can report bugs.
bug-reports:        https://github.com/viluon/lession-hs/issues
license:            NONE
author:             Andrew Kvapil
maintainer:         viluon@seznam.cz

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:

library lession-lib
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0, QuickCheck
    hs-source-dirs:   Ep00, Ep01, Ep02
    default-language: Haskell2010
